# Mycelink_lib

./: .gitignore  Cargo.toml
mycelink-lib-api/: Cargo.toml
mycelink-lib-api/src/: lib.rs
mycelink-lib-api/src/api/: create_account.rs  mod.rs  mycelink_add_contact.rs  mycelink_create_account.rs
mycelink-lib-api/src/crypto/: key_exchange.rs  key_material.rs  keypairs.rs  mod.rs  rachet.rs  ratchet.rs  secret_box.rs  signature.rs  signed_box.rs  types.rs
mycelink-lib-api/src/crypto/hash_provider/: blake3.rs  mod.rs  sha512.rs
mycelink-lib-api/src/crypto/kdf_provider/: mod.rs
mycelink-lib-api/src/crypto/key_exchange_providers/: mod.rs  x25519.rs
mycelink-lib-api/src/crypto/signature_providers/: ed25519.rs  mod.rs
mycelink-lib-api/src/crypto/symmetrical_providers/: mod.rs  xchacha20poly1305.rs
mycelink-lib-api/src/crypto/tagged_types/: keys.rs  mod.rs  tagged_key_exchange.rs  tagged_keypair.rs  tagged_secret_box.rs  tagged_signed_box.rs
mycelink-lib-api/src/crypto/types/: byte_array_64.rs  mod.rs
mycelink-lib-api/src/db/: db_connector.rs  db_schema_v0.sql  db_schema_v1.sql  mod.rs  schema_updater.rs
mycelink-lib-api/src/db/actions/: account_actions.rs  chat_actions.rs  contact_actions.rs  message_actions.rs  mod.rs  mycelink_account_actions.rs  protocol_config.rs  tenant_actions.rs
mycelink-lib-api/src/fcp_tools/: fcp_get.rs  fcp_put.rs  generate_ssk.rs  mod.rs  publish_account.rs
mycelink-lib-api/src/model/: account.rs  asymmetric_keys.rs  chat.rs  chat_config.rs  config.rs  connection_details.rs  contact.rs  keys.rs  media.rs  message.rs  message_types.rs  messager_service.rs  messenger_service.rs  mod.rs  mycelink_account.rs  protocol_config.rs  ratchet_hash_tag.rs  tagged_hash.rs  tagged_key_exchange.rs  tagged_keypair.rs  tagged_secret_box.rs  tagged_signed_box.rs  tenant.rs
mycelink-lib-api/src/mycelink/: compressed_box.rs  mod.rs  mycelink_account.rs  mycelink_channel.rs  mycelink_channel_message.rs  mycelink_channel_request.rs  mycelink_chat.rs  mycelink_chat_message.rs  mycelink_contact.rs  mycelink_message.rs  mycelink_ratchet_key_generator.rs  mycelink_service.rs
mycelink-lib-api/src/mycelink/protocol/: mycelink_channel.rs  mycelink_channel_message.rs  mycelink_channel_request.rs  mycelink_chat_message.rs
mycelink-lib-fcp/: Cargo.toml  LICENSE
mycelink-lib-fcp-bench/: Cargo.toml  LICENSE
mycelink-lib-fcp-bench/benches/: benches.rs
mycelink-lib-fcp-bench/benches/insert_benches/: ksk_bench.rs  mod.rs  ssk_bench.rs  usk_bench.rs
mycelink-lib-fcp-bench/src/: fcp_helper.rs  lib.rs
mycelink-lib-fcp/src/: decode_error.rs  fcp_connector.rs  fcp_parser.rs  fcp_parser_legacy.rs  lib.rs  peekable_reader.rs  peekable_reader_legacy.rs
mycelink-lib-fcp/src/messages/: all_data.rs  client_get.rs  client_hello.rs  client_put.rs  data_found.rs  generate_ssk.rs  get_failed.rs  list_peer.rs  mod.rs  node_hello.rs  put_failed.rs  put_successful.rs  skk_keypair.rs  ssk_keypair.rs  subscribe_usk.rs  subscribed_usk_update.rs  test_dda_complete.rs  test_dda_reply.rs  test_dda_request.rs  test_dda_response.rs  uri_generated.rs
mycelink-lib-fcp/src/model/: MessageIdentifier.rs  connection_identifier.rs  content_type.rs  fcp_version.rs  fields.rs  message.rs  message_identifier.rs  message_type_identifier.rs  mod.rs  persistence.rs  priority_class.rs  return_type.rs  unique_identifier.rs  upload_type.rs  uri.rs  verbosity.rs
mycelink-lib-fcp/tests/: generate_put_get_ssk.rs  hello_world.rs  put_get.rs  put_get_chk.rs  usk_tests.rs
