[package]
name = "mycelink-lib-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
tokio = {version = "1.36", features = ["rt", "macros", "net"]}
env_logger = "0.11.2"

[dependencies]
mycelink-lib-fcp = {path = "../mycelink-lib-fcp"}

mime = "0.3"
tokio = {version = "1.36", features = ["sync"] }
log = "0.4.20"