[package]
name = "mycelink-lib-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
tokio = { version = "1.36", features = ["rt", "macros", "net"] }
env_logger = "0.11.2"

[dependencies]
mycelink-lib-fcp = { path = "../mycelink-lib-fcp" }

anyhow = "1.0"
base64 = "0.21"
blake3 = "1.5"
ed25519-dalek = "2.1"
hex = { version = "0.4.3", features = ["serde"] }
log = "0.4.20"
mime = "0.3"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "sqlite"] }
tokio = { version = "1.36", features = ["sync", "macros"] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
