[package]
name = "mycelink-lib-fcp-bench"
version = "0.1.0"
edition = "2021"

[lib]
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "benches"
harness = false

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio", "async"] }
tokio = { version = "1.36", features = ["rt"] }
rand = "0.8"

[dependencies]
mycelink-lib-fcp = { path = "../mycelink-lib-fcp" }
tokio = { version = "1.36", features = ["io-util", "macros"] }
