[package]
name = "mycelink-lib-fcp"
version = "0.1.0"
edition = "2021"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.33", features = ["io-util"] }
pin-project-lite = "0.2"
rand = "0.8.5"
base64 = "0.21.5"
mime = "0.3.17"

[dev-dependencies]
tokio-test = "0.4.3"
tokio = { version = "1.33", features = ["rt", "macros", "net"] }