[package]
name = "mycelink-lib-fcp"
version = "0.1.0"
edition = "2021"

[features]
local_only = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
tokio-test = "0.4.3"
tokio = { version = "1.33", features = ["rt", "macros", "net"] }

[dependencies]
log = "0.4.20"
tokio = { version = "1.33", features = ["io-util", "net", "sync"] }
pin-project-lite = "0.2"
rand = "0.8.5"
base64 = "0.21"
mime = "0.3.17"

